# IWM_KWCM1_CMAKE

scr/: CMakeLists.txt  main.cpp
scr/Trygonometria/: trygonometria.cpp  trygonometria.h
